# algorithmic_trading

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  uv.txt
data/extracted/OHLCV/ASIA/: BHARTIARTL.NS.csv  HDB.csv  HINDUNILVR.NS.csv  IBN.csv  INFY.csv  ITC.NS.csv  LICI.NS.csv  LT.NS.csv  RELIANCE.NS.csv  SBIN.NS.csv  TCS.NS.csv
data/extracted/OHLCV/EU/: ACN.csv  ASML.csv  CDI.PA.csv  IDEXY.csv  MC.PA.csv  NVO.csv  OR.PA.csv  RMS.PA.csv  SAP.csv  SIE.DE.csv  TTE.csv
data/extracted/OHLCV/INDIA/: BHARTIARTL.NS.csv  HDB.csv  HINDUNILVR.NS.csv  IBN.csv  INFY.csv  ITC.NS.csv  LICI.NS.csv  LT.NS.csv  RELIANCE.NS.csv  SBIN.NS.csv  TCS.NS.csv
data/extracted/OHLCV/US/: AAPL.csv  AMZN.csv  AVGO.csv  BRK-B.csv  GOOG.csv  JPM.csv  LLY.csv  META.csv  MSFT.csv  NVDA.csv  V.csv
data/extracted/OHLCV/US_AMERICA/: AAPL.csv  AMZN.csv  AVGO.csv  BRK-B.csv  GOOG.csv  JPM.csv  LLY.csv  META.csv  MSFT.csv  NVDA.csv  V.csv
data/extracted/macro/: BTC-USD.csv  BTC_usd.csv  BZ=F.csv  Brent_oil_futures.csv  CL=F.csv  CPILFESL.csv  DGS.csv  DGS1.csv  DGS10.csv  DGS5.csv  EPI.csv  FEDFUNDS.csv  GC=F.csv  GDPPOT.csv  GOLD.csv  VIX.csv  WTI_oil_futures.csv  ^DJI.csv  ^GDAXI.csv  ^GSPC.csv  ^VIX.csv  eurostat_euro_yield.csv
data/transformed/: mock_data.parquet
data/transformed/OHLCV/ASIA/: LICI.NS.csv
data/transformed/macro/: BTC_usd.csv  Brent_oil_futures.csv  EPI.csv  GOLD.csv  WTI_oil_futures.csv  ^DJI.csv  ^GDAXI.csv  ^GSPC.csv
data/transfromed/OHLCV/EU/: ACN.csv  ASML.csv  CDI.PA.csv  IDEXY.csv  MC.PA.csv  NVO.csv  OR.PA.csv  RMS.PA.csv  SAP.csv  SIE.DE.csv  TTE.csv
data/transfromed/OHLCV/INDIA/: BHARTIARTL.NS.csv  HDB.csv  HINDUNILVR.NS.csv  IBN.csv  INFY.csv  ITC.NS.csv  LICI.NS.csv  LT.NS.csv  RELIANCE.NS.csv  SBIN.NS.csv  TCS.NS.csv
data/transfromed/OHLCV/US/: AAPL.csv  (+10 more)
model/: forecaster_recursive_multiseries.joblib  mock_model.joblib
notebooks/: 1_data_extraction.ipynb  2.data_transformation.ipynb  2_data_transformation.ipynb  3_data_load.ipynb  5_trading_API.ipynb  6_profitability_analysis.ipynb  6_trading_API.ipynb  X_appendix-glossary_of_metrics.ipynb
src/: data_etl_pipeline.py
src/ML deployment/: predict.py  train.py
src/ML deployment/support/: data_transformation.py
src/deployment/: predict.py  train.py
src/deployment/model/: forecaster_recursive_multiseries.joblib
src/deployment/predictions/: out_of_sample.parquet
src/deployment/support/: data_extraction.py  data_load.py  data_transformation.py  file_handling.py
src/predict/: mock_data.parquet  mock_model.joblib  predict.py
src/support/: data_analysis.py  data_extraction.py  data_load.py  data_transformation.py  data_visualization.py  file_handling.py  model_evaluation.py  timeseries_support.py  trade_evaluation.py  utils.py
src/support/config/: countries_by_region.yaml  countries_exchanges.py  tickers_to_include.yaml
src/trading/: data_load.py  trading.py
src/training/: data_etl_pipeline.py
(+4 files in other folders)
