[project]
name = "algorithmic-trading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "eurostat>=1.1.1",
    "finplot>=1.9.6",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "joblib>=1.4.2",
    "matplotlib>=3.10.0",
    "nbformat>=5.10.4",
    "nomkl>=0.0.3",
    "pandas>=2.2.3",
    "pandas-datareader>=0.10.0",
    "plotly>=5.24.1",
    "polars>=1.19.0",
    "seaborn>=0.13.2",
    "ta-lib>=0.6.1",
    "tqdm>=4.67.1",
    "tqdm-joblib>=0.0.4",
    "yfinance>=0.2.51",
]
