[project]
name = "algorithmic-trading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cupy-cuda12x>=13.3.0",
    "eurostat>=1.1.1",
    "fastapi>=0.115.6",
    "fastparquet>=2024.11.0",
    "finplot>=1.9.6",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "joblib>=1.4.2",
    "matplotlib>=3.10.0",
    "ml-insights>=1.0.4",
    "motor>=3.5.1",
    "nbformat>=5.10.4",
    "nomkl>=0.0.3",
    "pandas>=2.2.3",
    "pandas-datareader>=0.10.0",
    "pandas-market-calendars>=4.6.0",
    "plotly>=5.24.1",
    "pmdarima>=2.0.4",
    "polars>=1.19.0",
    "pymongo[srv]>=4.10.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "seaborn>=0.13.2",
    "sktime>=0.35.0",
    "ta-lib>=0.6.1",
    "tqdm>=4.67.1",
    "tqdm-joblib>=0.0.4",
    "uvicorn>=0.34.0",
    "xgboost>=2.1.3",
    "yfinance>=0.2.51",
]
